@@ -40,36 +40,6 @@ function remove_packages()
 	apt-get --purge remove --assume-yes --force-yes "$@" || failure "apt-get remove $@ failed, error=$?"
 }
 
-function run_package_manager()
-{
-	echo "Starting package application..."
-	
-	PACKAGE_APP=`which adept`
-	PACKAGE_APP_OPTIONS=(--caption "UCK Package Manager")
-	if [ "$PACKAGE_APP" = "" ]; then
-		PACKAGE_APP=`which adept_manager`
-	fi
-	if [ "$PACKAGE_APP" = "" ]; then
-		PACKAGE_APP=`which kpackagekit`
-	fi
-	if [ "$PACKAGE_APP" = "" ]; then
-		PACKAGE_APP=`which synaptic`
-		PACKAGE_APP_OPTIONS=(-t "UCK Package manager")
-	fi
-	
-	if [ "$PACKAGE_APP" = "" ]; then
-		dialog_msgbox "Failure" "Unable to find any package manager application"
-	else
-		eval `dbus-launch --sh-syntax --exit-with-session 2>/dev/null`
-		$PACKAGE_APP "${PACKAGE_APP_OPTIONS[@]}"
-		RESULT=$?
-	
-		if [ $RESULT -ne 0 ]; then
-			dialog_msgbox "Failure" "Running package application $PACKAGE_APP failed, error=$RESULT"
-		fi
-	fi
-}
-
 function run_console()
 {
 	echo "Starting console application..."
@@ -166,10 +136,9 @@ fi
 
 if [ "$RUN_MANUAL_CUSTOMIZATIONS" = "yes" ] ; then
 	while true ; do
-		CHOICE_PACKAGE_MANAGER="Run package manager"
 		CHOICE_CONSOLE="Run console application"
 		CHOICE_EXIT="Continue building"
-		CHOICE=`dialog_menu "Please choose customization action" "$CHOICE_PACKAGE_MANAGER" "$CHOICE_CONSOLE" "$CHOICE_EXIT"`
+		CHOICE=`dialog_menu "Please choose customization action" "$CHOICE_CONSOLE" "$CHOICE_EXIT"`
 		RESULT=$?
 
 		if [ -z $CHOICE ] ; then
@@ -182,8 +151,6 @@ if [ "$RUN_MANUAL_CUSTOMIZATIONS" = "yes" ] ; then
 
 		if [ "$CHOICE" = "$CHOICE_EXIT" ] ; then
 			break
-		elif [ "$CHOICE" = "$CHOICE_PACKAGE_MANAGER" ] ; then
-			run_package_manager
 		elif [ "$CHOICE" = "$CHOICE_CONSOLE" ] ; then
 			run_console
 		fi
